# prj

./: .gitignore  .ycm_extra_conf.py  clean.py
AI/cppInt/: CMakeLists.txt
AI/cppInt/include/: AtomicModelDescription.h  BodyCommandDescription.h  CommandInput.h  VectorModelDescription.h
AI/cppInt/src/: AtomicModelDescription.cpp  Domain.cpp  VectorModelDescription.cpp  main.cpp
CMakeTutorials/basic01_variables/: CMakeLists.txt  MyClass.h  main.cpp
CMakeTutorials/basic02_includeDirs/: CMakeLists.txt  main.cpp
CMakeTutorials/basic04_compileDefinitions/: CMakeLists.txt  main.cpp
CMakeTutorials/basic04_compileDefinitions/include/: MyClass.h
Vars/: CMakeLists.txt  vars.hpp
Vars/src/Vars/: vars.hpp
Vars/tests/: CMakeLists.txt  TestsMain.cpp  tests.cpp
avdec/: CMakeLists.txt  main.cpp
barrierTest/: Barrier.cpp  Barrier.h  CMakeLists.txt  FunctionPrologue.h  costring.h  main.cpp
cmakeDep2/app/: CMakeLists.txt
cmakeDep2/liba/: CMakeLists.txt
cmakeDep2/liba/src/liba/: liba.cpp  liba.h
cmakeHier/: CMakeLists.txt  main.cpp  test.sh
cmakeHier/L/: CMakeLists.txt
cmakeHier/L/A/: A.cpp  A.h  CMakeLists.txt
cmakeHier/L/B/: CMakeLists.txt
cmakeHier/L/B/BA/: BA.cpp  BA.h  CMakeLists.txt
cmakeHier/L/B/BB/: BB.cpp  BB.h  CMakeLists.txt
cmakeHier/L/C/: C.cpp  C.h  CMakeLists.txt
cmakeHier/L/C/CA/: CA.cpp  CA.h  CMakeLists.txt
cmakeLibraryDependencies/: CMakeLists.txt
cmakeLibraryDependencies/A/: A.cpp  A.h
cmakeLibraryDependencies/B_headerA/: B_headerA.cpp  B_headerA.h
cmakeLibraryDependencies/headerA/: headerA.h
cmakeLibraryDependencies/headerB_headerA/: headerB_headerA.h
cmakeLibraryDependencies/headerC_A/: headerC_A.h
cmakeProgramming/: CMakeLists.txt
domain01/: .ycm_extra_conf.py  CMakeLists.txt
domain01/Domain/: AtomicObject.h  AtomicRelationType.h  Domain.h  Fwd.h  Relation.h  Value.h
fastNoise/: CMakeLists.txt
fastNoise/src/: main.cpp
gam/: CMakeLists.txt  createWindow.cpp  createWindow.h  destroyWindow.cpp  destroyWindow.h  main.cpp  tabletSDL2.cpp  tabletSDL2.h
gtesting/: CMakeLists.txt
gtesting/src/: main.cpp
imgui/: CMakeLists.txt  main.cpp
imgui/garbage/: Makefile  example  imgui.ini  makefile
imgui/imguiDormon/: CMakeLists.txt
imgui/imguiDormon/src/imguiDormon/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h
imgui/imguiOpenGL3Dormon/: CMakeLists.txt
imgui/imguiOpenGL3Dormon/src/imguiOpenGL3Dormon/: imgui_impl_opengl3.cpp
imgui2/: CMakeLists.txt  main.cpp
imgui2/imguiDormon/src/imguiDormon/: imgui_draw.cpp  stb_truetype.h
imgui2/imguiOpenGL3Dormon/src/imguiOpenGL3Dormon/: imgui_impl_opengl3.h
imgui2/imguiOpenGLDormon/: CMakeLists.txt
imgui2/imguiOpenGLDormon/src/imguiOpenGLDormon/: BackupOpenGLState.cpp  BackupOpenGLState.h  GetProcAddress.cpp  GetProcAddress.h  MinimalOpenGL.h  OpenGLTable.cpp  OpenGLTable.h  Renderer.cpp  (+5 more)
imgui2/imguiSDL2Dormon/: CMakeLists.txt
jsonTest/: .ycm_extra_conf.py  CMakeLists.txt  NIndex.cpp  NIndex.h  Tensor.cpp  Tensor.h  main.cpp  model_simple_00.json
jsonTest/NIndex/: CMakeLists.txt
jsonTest/NIndex/cmake/: NIndexConfig.cmake
jsonTest/NIndex/src/: NIndex.cpp
jsonTest/NetworkConfiguration/: CMakeLists.txt
jsonTest/NetworkConfiguration/cmake/: NetworkConfigurationConfig.cmake
jsonTest/NetworkConfiguration/src/: Conv2D.cpp  Dense.cpp  GlobalMaxPooling.cpp  Input.cpp  Layer.cpp  MaxPooling.cpp  Network.cpp
jsonTest/NetworkConfigurationJSONLoader/: CMakeLists.txt
jsonTest/NetworkConfigurationJSONLoader/cmake/: NetworkConfiguration.cmake
jsonTest/NetworkConfigurationJSONLoader/src/: Loader.cpp
jsonTest/Tensor/: CMakeLists.txt
jsonTest/Tensor/cmake/: TensorConfig.cmake
jsonTest/Tensor/src/: Tensor.cpp
model2svg/: CMakeLists.txt  README.md
model2svg/src/: FastAdjacency.cpp  FastAdjacency.h  SVG.h  Scene.h  main.cpp  planeSink.cpp
newCld/: CMakeCache.txt  CMakeLibrary.cmake  CMakeLists.txt
newCld/CPUInferenceEngine/: CMakeLists.txt
newCld/CPULayerImplementation/: CMakeLists.txt  README.md
newCld/CPULayerImplementation/tests/: BasicTests.cpp  CMakeLists.txt
newCld/DefineList/: CMakeLists.txt
newCld/InferenceEngine/: CMakeLists.txt
newCld/NIndex/: CMakeLists.txt
newCld/NetworkConfiguration/: CMakeLists.txt
newCld/OpenCLInferenceEngine/: CMakeLists.txt
newCld/OpenCLLists/: CMakeLists.txt
newCld/Tensor/: CMakeLists.txt
newCld/TextUtils/: CMakeLists.txt
newCld/TypeList/: CMakeLists.txt
oclBlockRead/: CMakeLists.txt
oclBlockRead/src/: main.cpp
remsub/: Barrier.cpp  CMakeLists.txt  CachedVideo.cpp  CachedVideo.hpp  DVars.hpp  Project.cpp  Project.hpp  Stream.cpp  Stream.hpp  VideoManager.cpp  VideoManager.hpp  computeFrame.cpp  computeFrame.hpp  createComputeProgram.cpp  createComputeProgram.hpp  createDrawProgram.cpp  createDrawProgram.hpp  drawFinalFrame.cpp  drawFinalFrame.hpp  drawVideo.fp  editProgram.cpp  editProgram.hpp  ffcom.sh  fileWatcher.cpp  fun_proj.json  getTimeFormat.cpp  getTimeFormat.hpp  init.cpp  init.hpp  keyframes.hpp  loadFragment.cpp  loadFragment.hpp  loadTxtFile.cpp  main.cpp  mainMenu.cpp  mainMenu.hpp  missingFrames.py  onKey.cpp  onKey.hpp  parseArgs.cpp  (+9 more)
remsub/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
testycm/: CMakeLists.txt
testycm/src/: main.cpp  mylib.hpp
vkc_2buf/: CMakeLists.txt  main.cpp  main.hpp  makefile  shader.glsl
vkc_2buf/resources/: shader.glsl
vkc_2buf/src/: createBuffer.cpp  createShaderModule.cpp  createShaderModule.hpp  devMem.cpp  devMem.hpp  error.hpp  main.cpp  main.hpp
vkc_clearFramebuffer/: CMakeLists.txt
vkc_clearFramebuffer/src/: main.cpp  main.hpp
vkc_ren/: CMakeLists.txt
vkc_ren/resources/: fs.glsl  shader.glsl  vs.glsl
vkc_ren/src/: createBuffer.hpp  createShaderModule.cpp  devMem.cpp  error.cpp  main.cpp  main.hpp
vkcoop/: CMakeLists.txt  deviceMemory.cpp  deviceMemory.hpp  instance.cpp  instance.hpp  main.cpp  main.hpp  makefile  physicalDevice.cpp  physicalDevice.hpp
waylandImageCMake/: CMakeLists.txt  QuiltImage.h  Window.h  egl.hpp  main.cpp  makefile  read.md  startWayImg  util.h  wayImg.service  wayland.hpp
(+1553 files in other folders)
